[package]
name = "ratatui-hillclimb"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier2d-f64 = { version = "0.22.0", features = [ "simd-stable", "parallel" ] }
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = [ "full" ] }
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.28"
color-eyre = "0.6.3"
